// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RadioButton should render component with disabled state 1`] = `
{
  "asFragment": [Function],
  "baseElement": .c3 {
  visibility: hidden;
  pointer-events: none;
  position: absolute;
  background: var(--admiral-color-Opacity_Hover, #0000000D);
  left: 50%;
  top: 50%;
  transform: translate(-50%, -50%);
  border-radius: 50%;
  width: calc(100% + 16px);
  height: calc(100% + 16px);
  background-color: var(--admiral-color-Opacity_Hover, #0000000D);
}

.c5 {
  display: flex;
  flex-direction: column;
  align-content: center;
  margin: 2px 0 2px 8px;
  font-family: var(--admiral-font-family, 'VTB Group UI', sans-serif);
  font-style: normal;
  font-weight: var(--admiral-font-weight-Body_Body1Short, 400);
  font-size: var(--admiral-font-size-Body_Body1Short, 16px);
  line-height: var(--admiral-line-height-Body_Body1Short, 20px);
  font-feature-settings: 'tnum' on,'lnum' on;
  text-rendering: geometricPrecision;
  color: var(--admiral-color-Neutral_Neutral30, #B2B5B8);
}

fieldset:disabled .c5.c5 {
  color: var(--admiral-color-Neutral_Neutral30, #B2B5B8);
}

fieldset[data-dimension='s'] .c5.c5 {
  font-family: var(--admiral-font-family, 'VTB Group UI', sans-serif);
  font-style: normal;
  font-weight: var(--admiral-font-weight-Body_Body2Short, 400);
  font-size: var(--admiral-font-size-Body_Body2Short, 14px);
  line-height: var(--admiral-line-height-Body_Body2Short, 16px);
  font-feature-settings: 'tnum' on,'lnum' on;
  text-rendering: geometricPrecision;
}

.c4 {
  display: inline-block;
  position: absolute;
  flex-shrink: 0;
  margin: 0;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  content: '';
  box-sizing: border-box;
  pointer-events: none;
  border-radius: 50%;
  transition: all 0.25s ease-in-out;
  width: 20px;
  height: 20px;
  background-color: var(--admiral-color-Neutral_Neutral00, #FFFFFF);
  border: 1px solid var(--admiral-color-Neutral_Neutral50, #74767B);
  border-color: var(--admiral-color-Neutral_Neutral30, #B2B5B8);
  background-color: var(--admiral-color-Neutral_Neutral10, #EAEBEC);
}

fieldset[data-dimension='s'] .c4 {
  width: 18px;
  height: 18px;
}

fieldset:disabled .c4 {
  border: 1px solid var(--admiral-color-Neutral_Neutral30, #B2B5B8);
}

.c2 {
  pointer-events: none;
  position: relative;
  flex-shrink: 0;
  border-radius: 50%;
  margin: 2px;
  width: 20px;
  height: 20px;
}

fieldset[data-dimension='s'] .c2 {
  width: 18px;
  height: 18px;
  margin: 1px;
}

.c1 {
  position: absolute;
  cursor: pointer;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  padding: 0;
  margin: 0;
  opacity: 0;
  box-sizing: border-box;
}

.c1:disabled {
  cursor: not-allowed;
}

.c1:not(:checked):disabled+div>span {
  background-color: var(--admiral-color-Neutral_Neutral10, #EAEBEC);
}

.c1:checked:disabled+div>span {
  border: 5px solid var(--admiral-color-Primary_Primary30, #A7C7FF);
  background-color: var(--admiral-color-Neutral_Neutral00, #FFFFFF);
}

.c1:checked:not(:disabled)+div>span {
  border: 5px solid var(--admiral-color_Primary_Primary60Main, #0062FF);
}

.c1:not(:disabled):focus-visible+div {
  outline-offset: 2px;
  outline: var(--admiral-color-Primary_Primary60Main, #0062FF) solid 2px;
}

.c1:not(:disabled):hover+div>div {
  visibility: visible;
}

.c1:not(:disabled):hover:focus-visible+div {
  outline: none;
}

.c1:not(:disabled):active+div>div {
  visibility: visible;
  background: var(--admiral-color-Opacity_Press, #0000001F);
}

.c1:not(:disabled):active:focus-visible+div {
  outline: none;
}

.c0 {
  display: flex;
  align-items: flex-start;
  position: relative;
  box-sizing: content-box;
  user-select: none;
  cursor: not-allowed;
  color: var(--admiral-color-Neutral_Neutral30, #B2B5B8);
}

fieldset:disabled .c0.c0 {
  color: var(--admiral-color-Neutral_Neutral30, #B2B5B8);
  cursor: not-allowed;
}

<body>
    <div>
      <label
        class="c0"
        disabled=""
      >
        <input
          class="c1"
          data-testid="element"
          disabled=""
          type="radio"
          value="radio1"
        />
        <div
          class="c2"
        >
          <div
            class="c3"
          />
          <span
            aria-hidden="true"
            class="c4"
            disabled=""
          />
        </div>
        <div
          class="c5"
          disabled=""
        >
          text
        </div>
      </label>
    </div>
  </body>,
  "container": .c3 {
  visibility: hidden;
  pointer-events: none;
  position: absolute;
  background: var(--admiral-color-Opacity_Hover, #0000000D);
  left: 50%;
  top: 50%;
  transform: translate(-50%, -50%);
  border-radius: 50%;
  width: calc(100% + 16px);
  height: calc(100% + 16px);
  background-color: var(--admiral-color-Opacity_Hover, #0000000D);
}

.c5 {
  display: flex;
  flex-direction: column;
  align-content: center;
  margin: 2px 0 2px 8px;
  font-family: var(--admiral-font-family, 'VTB Group UI', sans-serif);
  font-style: normal;
  font-weight: var(--admiral-font-weight-Body_Body1Short, 400);
  font-size: var(--admiral-font-size-Body_Body1Short, 16px);
  line-height: var(--admiral-line-height-Body_Body1Short, 20px);
  font-feature-settings: 'tnum' on,'lnum' on;
  text-rendering: geometricPrecision;
  color: var(--admiral-color-Neutral_Neutral30, #B2B5B8);
}

fieldset:disabled .c5.c5 {
  color: var(--admiral-color-Neutral_Neutral30, #B2B5B8);
}

fieldset[data-dimension='s'] .c5.c5 {
  font-family: var(--admiral-font-family, 'VTB Group UI', sans-serif);
  font-style: normal;
  font-weight: var(--admiral-font-weight-Body_Body2Short, 400);
  font-size: var(--admiral-font-size-Body_Body2Short, 14px);
  line-height: var(--admiral-line-height-Body_Body2Short, 16px);
  font-feature-settings: 'tnum' on,'lnum' on;
  text-rendering: geometricPrecision;
}

.c4 {
  display: inline-block;
  position: absolute;
  flex-shrink: 0;
  margin: 0;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  content: '';
  box-sizing: border-box;
  pointer-events: none;
  border-radius: 50%;
  transition: all 0.25s ease-in-out;
  width: 20px;
  height: 20px;
  background-color: var(--admiral-color-Neutral_Neutral00, #FFFFFF);
  border: 1px solid var(--admiral-color-Neutral_Neutral50, #74767B);
  border-color: var(--admiral-color-Neutral_Neutral30, #B2B5B8);
  background-color: var(--admiral-color-Neutral_Neutral10, #EAEBEC);
}

fieldset[data-dimension='s'] .c4 {
  width: 18px;
  height: 18px;
}

fieldset:disabled .c4 {
  border: 1px solid var(--admiral-color-Neutral_Neutral30, #B2B5B8);
}

.c2 {
  pointer-events: none;
  position: relative;
  flex-shrink: 0;
  border-radius: 50%;
  margin: 2px;
  width: 20px;
  height: 20px;
}

fieldset[data-dimension='s'] .c2 {
  width: 18px;
  height: 18px;
  margin: 1px;
}

.c1 {
  position: absolute;
  cursor: pointer;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  padding: 0;
  margin: 0;
  opacity: 0;
  box-sizing: border-box;
}

.c1:disabled {
  cursor: not-allowed;
}

.c1:not(:checked):disabled+div>span {
  background-color: var(--admiral-color-Neutral_Neutral10, #EAEBEC);
}

.c1:checked:disabled+div>span {
  border: 5px solid var(--admiral-color-Primary_Primary30, #A7C7FF);
  background-color: var(--admiral-color-Neutral_Neutral00, #FFFFFF);
}

.c1:checked:not(:disabled)+div>span {
  border: 5px solid var(--admiral-color_Primary_Primary60Main, #0062FF);
}

.c1:not(:disabled):focus-visible+div {
  outline-offset: 2px;
  outline: var(--admiral-color-Primary_Primary60Main, #0062FF) solid 2px;
}

.c1:not(:disabled):hover+div>div {
  visibility: visible;
}

.c1:not(:disabled):hover:focus-visible+div {
  outline: none;
}

.c1:not(:disabled):active+div>div {
  visibility: visible;
  background: var(--admiral-color-Opacity_Press, #0000001F);
}

.c1:not(:disabled):active:focus-visible+div {
  outline: none;
}

.c0 {
  display: flex;
  align-items: flex-start;
  position: relative;
  box-sizing: content-box;
  user-select: none;
  cursor: not-allowed;
  color: var(--admiral-color-Neutral_Neutral30, #B2B5B8);
}

fieldset:disabled .c0.c0 {
  color: var(--admiral-color-Neutral_Neutral30, #B2B5B8);
  cursor: not-allowed;
}

<div>
    <label
      class="c0"
      disabled=""
    >
      <input
        class="c1"
        data-testid="element"
        disabled=""
        type="radio"
        value="radio1"
      />
      <div
        class="c2"
      >
        <div
          class="c3"
        />
        <span
          aria-hidden="true"
          class="c4"
          disabled=""
        />
      </div>
      <div
        class="c5"
        disabled=""
      >
        text
      </div>
    </label>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`RadioButton should render component with required properties 1`] = `
{
  "asFragment": [Function],
  "baseElement": .c3 {
  visibility: hidden;
  pointer-events: none;
  position: absolute;
  background: var(--admiral-color-Opacity_Hover, #0000000D);
  left: 50%;
  top: 50%;
  transform: translate(-50%, -50%);
  border-radius: 50%;
  width: calc(100% + 16px);
  height: calc(100% + 16px);
  background-color: var(--admiral-color-Opacity_Hover, #0000000D);
}

.c5 {
  display: flex;
  flex-direction: column;
  align-content: center;
  margin: 2px 0 2px 8px;
  font-family: var(--admiral-font-family, 'VTB Group UI', sans-serif);
  font-style: normal;
  font-weight: var(--admiral-font-weight-Body_Body1Short, 400);
  font-size: var(--admiral-font-size-Body_Body1Short, 16px);
  line-height: var(--admiral-line-height-Body_Body1Short, 20px);
  font-feature-settings: 'tnum' on,'lnum' on;
  text-rendering: geometricPrecision;
  color: var(--admiral-color-Neutral_Neutral90, #252629);
}

fieldset:disabled .c5.c5 {
  color: var(--admiral-color-Neutral_Neutral30, #B2B5B8);
}

fieldset[data-dimension='s'] .c5.c5 {
  font-family: var(--admiral-font-family, 'VTB Group UI', sans-serif);
  font-style: normal;
  font-weight: var(--admiral-font-weight-Body_Body2Short, 400);
  font-size: var(--admiral-font-size-Body_Body2Short, 14px);
  line-height: var(--admiral-line-height-Body_Body2Short, 16px);
  font-feature-settings: 'tnum' on,'lnum' on;
  text-rendering: geometricPrecision;
}

.c4 {
  display: inline-block;
  position: absolute;
  flex-shrink: 0;
  margin: 0;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  content: '';
  box-sizing: border-box;
  pointer-events: none;
  border-radius: 50%;
  transition: all 0.25s ease-in-out;
  width: 20px;
  height: 20px;
  background-color: var(--admiral-color-Neutral_Neutral00, #FFFFFF);
  border: 1px solid var(--admiral-color-Neutral_Neutral50, #74767B);
}

fieldset[data-dimension='s'] .c4 {
  width: 18px;
  height: 18px;
}

fieldset:disabled .c4 {
  border: 1px solid var(--admiral-color-Neutral_Neutral30, #B2B5B8);
}

.c2 {
  pointer-events: none;
  position: relative;
  flex-shrink: 0;
  border-radius: 50%;
  margin: 2px;
  width: 20px;
  height: 20px;
}

fieldset[data-dimension='s'] .c2 {
  width: 18px;
  height: 18px;
  margin: 1px;
}

.c1 {
  position: absolute;
  cursor: pointer;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  padding: 0;
  margin: 0;
  opacity: 0;
  box-sizing: border-box;
}

.c1:disabled {
  cursor: not-allowed;
}

.c1:not(:checked):disabled+div>span {
  background-color: var(--admiral-color-Neutral_Neutral10, #EAEBEC);
}

.c1:checked:disabled+div>span {
  border: 5px solid var(--admiral-color-Primary_Primary30, #A7C7FF);
  background-color: var(--admiral-color-Neutral_Neutral00, #FFFFFF);
}

.c1:checked:not(:disabled)+div>span {
  border: 5px solid var(--admiral-color_Primary_Primary60Main, #0062FF);
}

.c1:not(:disabled):focus-visible+div {
  outline-offset: 2px;
  outline: var(--admiral-color-Primary_Primary60Main, #0062FF) solid 2px;
}

.c1:not(:disabled):hover+div>div {
  visibility: visible;
}

.c1:not(:disabled):hover:focus-visible+div {
  outline: none;
}

.c1:not(:disabled):active+div>div {
  visibility: visible;
  background: var(--admiral-color-Opacity_Press, #0000001F);
}

.c1:not(:disabled):active:focus-visible+div {
  outline: none;
}

.c0 {
  display: flex;
  align-items: flex-start;
  position: relative;
  box-sizing: content-box;
  user-select: none;
  cursor: pointer;
  color: var(--admiral-color-Neutral_Neutral90, #252629);
}

fieldset:disabled .c0.c0 {
  color: var(--admiral-color-Neutral_Neutral30, #B2B5B8);
  cursor: not-allowed;
}

<body>
    <div>
      <label
        class="c0"
      >
        <input
          class="c1"
          data-testid="element"
          type="radio"
          value="radio1"
        />
        <div
          class="c2"
        >
          <div
            class="c3"
          />
          <span
            aria-hidden="true"
            class="c4"
          />
        </div>
        <div
          class="c5"
        >
          text
        </div>
      </label>
    </div>
  </body>,
  "container": .c3 {
  visibility: hidden;
  pointer-events: none;
  position: absolute;
  background: var(--admiral-color-Opacity_Hover, #0000000D);
  left: 50%;
  top: 50%;
  transform: translate(-50%, -50%);
  border-radius: 50%;
  width: calc(100% + 16px);
  height: calc(100% + 16px);
  background-color: var(--admiral-color-Opacity_Hover, #0000000D);
}

.c5 {
  display: flex;
  flex-direction: column;
  align-content: center;
  margin: 2px 0 2px 8px;
  font-family: var(--admiral-font-family, 'VTB Group UI', sans-serif);
  font-style: normal;
  font-weight: var(--admiral-font-weight-Body_Body1Short, 400);
  font-size: var(--admiral-font-size-Body_Body1Short, 16px);
  line-height: var(--admiral-line-height-Body_Body1Short, 20px);
  font-feature-settings: 'tnum' on,'lnum' on;
  text-rendering: geometricPrecision;
  color: var(--admiral-color-Neutral_Neutral90, #252629);
}

fieldset:disabled .c5.c5 {
  color: var(--admiral-color-Neutral_Neutral30, #B2B5B8);
}

fieldset[data-dimension='s'] .c5.c5 {
  font-family: var(--admiral-font-family, 'VTB Group UI', sans-serif);
  font-style: normal;
  font-weight: var(--admiral-font-weight-Body_Body2Short, 400);
  font-size: var(--admiral-font-size-Body_Body2Short, 14px);
  line-height: var(--admiral-line-height-Body_Body2Short, 16px);
  font-feature-settings: 'tnum' on,'lnum' on;
  text-rendering: geometricPrecision;
}

.c4 {
  display: inline-block;
  position: absolute;
  flex-shrink: 0;
  margin: 0;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  content: '';
  box-sizing: border-box;
  pointer-events: none;
  border-radius: 50%;
  transition: all 0.25s ease-in-out;
  width: 20px;
  height: 20px;
  background-color: var(--admiral-color-Neutral_Neutral00, #FFFFFF);
  border: 1px solid var(--admiral-color-Neutral_Neutral50, #74767B);
}

fieldset[data-dimension='s'] .c4 {
  width: 18px;
  height: 18px;
}

fieldset:disabled .c4 {
  border: 1px solid var(--admiral-color-Neutral_Neutral30, #B2B5B8);
}

.c2 {
  pointer-events: none;
  position: relative;
  flex-shrink: 0;
  border-radius: 50%;
  margin: 2px;
  width: 20px;
  height: 20px;
}

fieldset[data-dimension='s'] .c2 {
  width: 18px;
  height: 18px;
  margin: 1px;
}

.c1 {
  position: absolute;
  cursor: pointer;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  padding: 0;
  margin: 0;
  opacity: 0;
  box-sizing: border-box;
}

.c1:disabled {
  cursor: not-allowed;
}

.c1:not(:checked):disabled+div>span {
  background-color: var(--admiral-color-Neutral_Neutral10, #EAEBEC);
}

.c1:checked:disabled+div>span {
  border: 5px solid var(--admiral-color-Primary_Primary30, #A7C7FF);
  background-color: var(--admiral-color-Neutral_Neutral00, #FFFFFF);
}

.c1:checked:not(:disabled)+div>span {
  border: 5px solid var(--admiral-color_Primary_Primary60Main, #0062FF);
}

.c1:not(:disabled):focus-visible+div {
  outline-offset: 2px;
  outline: var(--admiral-color-Primary_Primary60Main, #0062FF) solid 2px;
}

.c1:not(:disabled):hover+div>div {
  visibility: visible;
}

.c1:not(:disabled):hover:focus-visible+div {
  outline: none;
}

.c1:not(:disabled):active+div>div {
  visibility: visible;
  background: var(--admiral-color-Opacity_Press, #0000001F);
}

.c1:not(:disabled):active:focus-visible+div {
  outline: none;
}

.c0 {
  display: flex;
  align-items: flex-start;
  position: relative;
  box-sizing: content-box;
  user-select: none;
  cursor: pointer;
  color: var(--admiral-color-Neutral_Neutral90, #252629);
}

fieldset:disabled .c0.c0 {
  color: var(--admiral-color-Neutral_Neutral30, #B2B5B8);
  cursor: not-allowed;
}

<div>
    <label
      class="c0"
    >
      <input
        class="c1"
        data-testid="element"
        type="radio"
        value="radio1"
      />
      <div
        class="c2"
      >
        <div
          class="c3"
        />
        <span
          aria-hidden="true"
          class="c4"
        />
      </div>
      <div
        class="c5"
      >
        text
      </div>
    </label>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`RadioButton should render component with small dimension 1`] = `
{
  "asFragment": [Function],
  "baseElement": .c3 {
  visibility: hidden;
  pointer-events: none;
  position: absolute;
  background: var(--admiral-color-Opacity_Hover, #0000000D);
  left: 50%;
  top: 50%;
  transform: translate(-50%, -50%);
  border-radius: 50%;
  width: calc(100% + 14px);
  height: calc(100% + 14px);
  background-color: var(--admiral-color-Opacity_Hover, #0000000D);
}

.c5 {
  display: flex;
  flex-direction: column;
  align-content: center;
  margin: 2px 0 2px 8px;
  font-family: var(--admiral-font-family, 'VTB Group UI', sans-serif);
  font-style: normal;
  font-weight: var(--admiral-font-weight-Body_Body2Short, 400);
  font-size: var(--admiral-font-size-Body_Body2Short, 14px);
  line-height: var(--admiral-line-height-Body_Body2Short, 16px);
  font-feature-settings: 'tnum' on,'lnum' on;
  text-rendering: geometricPrecision;
  color: var(--admiral-color-Neutral_Neutral90, #252629);
}

fieldset:disabled .c5.c5 {
  color: var(--admiral-color-Neutral_Neutral30, #B2B5B8);
}

fieldset[data-dimension='s'] .c5.c5 {
  font-family: var(--admiral-font-family, 'VTB Group UI', sans-serif);
  font-style: normal;
  font-weight: var(--admiral-font-weight-Body_Body2Short, 400);
  font-size: var(--admiral-font-size-Body_Body2Short, 14px);
  line-height: var(--admiral-line-height-Body_Body2Short, 16px);
  font-feature-settings: 'tnum' on,'lnum' on;
  text-rendering: geometricPrecision;
}

.c4 {
  display: inline-block;
  position: absolute;
  flex-shrink: 0;
  margin: 0;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  content: '';
  box-sizing: border-box;
  pointer-events: none;
  border-radius: 50%;
  transition: all 0.25s ease-in-out;
  width: 18px;
  height: 18px;
  background-color: var(--admiral-color-Neutral_Neutral00, #FFFFFF);
  border: 1px solid var(--admiral-color-Neutral_Neutral50, #74767B);
}

fieldset[data-dimension='s'] .c4 {
  width: 18px;
  height: 18px;
}

fieldset:disabled .c4 {
  border: 1px solid var(--admiral-color-Neutral_Neutral30, #B2B5B8);
}

.c2 {
  pointer-events: none;
  position: relative;
  flex-shrink: 0;
  border-radius: 50%;
  margin: 1px;
  width: 18px;
  height: 18px;
}

fieldset[data-dimension='s'] .c2 {
  width: 18px;
  height: 18px;
  margin: 1px;
}

.c1 {
  position: absolute;
  cursor: pointer;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  padding: 0;
  margin: 0;
  opacity: 0;
  box-sizing: border-box;
}

.c1:disabled {
  cursor: not-allowed;
}

.c1:not(:checked):disabled+div>span {
  background-color: var(--admiral-color-Neutral_Neutral10, #EAEBEC);
}

.c1:checked:disabled+div>span {
  border: 5px solid var(--admiral-color-Primary_Primary30, #A7C7FF);
  background-color: var(--admiral-color-Neutral_Neutral00, #FFFFFF);
}

.c1:checked:not(:disabled)+div>span {
  border: 5px solid var(--admiral-color_Primary_Primary60Main, #0062FF);
}

.c1:not(:disabled):focus-visible+div {
  outline-offset: 2px;
  outline: var(--admiral-color-Primary_Primary60Main, #0062FF) solid 2px;
}

.c1:not(:disabled):hover+div>div {
  visibility: visible;
}

.c1:not(:disabled):hover:focus-visible+div {
  outline: none;
}

.c1:not(:disabled):active+div>div {
  visibility: visible;
  background: var(--admiral-color-Opacity_Press, #0000001F);
}

.c1:not(:disabled):active:focus-visible+div {
  outline: none;
}

.c0 {
  display: flex;
  align-items: flex-start;
  position: relative;
  box-sizing: content-box;
  user-select: none;
  cursor: pointer;
  color: var(--admiral-color-Neutral_Neutral90, #252629);
}

fieldset:disabled .c0.c0 {
  color: var(--admiral-color-Neutral_Neutral30, #B2B5B8);
  cursor: not-allowed;
}

<body>
    <div>
      <label
        class="c0"
      >
        <input
          class="c1"
          data-testid="element"
          type="radio"
          value="radio1"
        />
        <div
          class="c2"
        >
          <div
            class="c3"
          />
          <span
            aria-hidden="true"
            class="c4"
          />
        </div>
        <div
          class="c5"
        >
          text
        </div>
      </label>
    </div>
  </body>,
  "container": .c3 {
  visibility: hidden;
  pointer-events: none;
  position: absolute;
  background: var(--admiral-color-Opacity_Hover, #0000000D);
  left: 50%;
  top: 50%;
  transform: translate(-50%, -50%);
  border-radius: 50%;
  width: calc(100% + 14px);
  height: calc(100% + 14px);
  background-color: var(--admiral-color-Opacity_Hover, #0000000D);
}

.c5 {
  display: flex;
  flex-direction: column;
  align-content: center;
  margin: 2px 0 2px 8px;
  font-family: var(--admiral-font-family, 'VTB Group UI', sans-serif);
  font-style: normal;
  font-weight: var(--admiral-font-weight-Body_Body2Short, 400);
  font-size: var(--admiral-font-size-Body_Body2Short, 14px);
  line-height: var(--admiral-line-height-Body_Body2Short, 16px);
  font-feature-settings: 'tnum' on,'lnum' on;
  text-rendering: geometricPrecision;
  color: var(--admiral-color-Neutral_Neutral90, #252629);
}

fieldset:disabled .c5.c5 {
  color: var(--admiral-color-Neutral_Neutral30, #B2B5B8);
}

fieldset[data-dimension='s'] .c5.c5 {
  font-family: var(--admiral-font-family, 'VTB Group UI', sans-serif);
  font-style: normal;
  font-weight: var(--admiral-font-weight-Body_Body2Short, 400);
  font-size: var(--admiral-font-size-Body_Body2Short, 14px);
  line-height: var(--admiral-line-height-Body_Body2Short, 16px);
  font-feature-settings: 'tnum' on,'lnum' on;
  text-rendering: geometricPrecision;
}

.c4 {
  display: inline-block;
  position: absolute;
  flex-shrink: 0;
  margin: 0;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  content: '';
  box-sizing: border-box;
  pointer-events: none;
  border-radius: 50%;
  transition: all 0.25s ease-in-out;
  width: 18px;
  height: 18px;
  background-color: var(--admiral-color-Neutral_Neutral00, #FFFFFF);
  border: 1px solid var(--admiral-color-Neutral_Neutral50, #74767B);
}

fieldset[data-dimension='s'] .c4 {
  width: 18px;
  height: 18px;
}

fieldset:disabled .c4 {
  border: 1px solid var(--admiral-color-Neutral_Neutral30, #B2B5B8);
}

.c2 {
  pointer-events: none;
  position: relative;
  flex-shrink: 0;
  border-radius: 50%;
  margin: 1px;
  width: 18px;
  height: 18px;
}

fieldset[data-dimension='s'] .c2 {
  width: 18px;
  height: 18px;
  margin: 1px;
}

.c1 {
  position: absolute;
  cursor: pointer;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  padding: 0;
  margin: 0;
  opacity: 0;
  box-sizing: border-box;
}

.c1:disabled {
  cursor: not-allowed;
}

.c1:not(:checked):disabled+div>span {
  background-color: var(--admiral-color-Neutral_Neutral10, #EAEBEC);
}

.c1:checked:disabled+div>span {
  border: 5px solid var(--admiral-color-Primary_Primary30, #A7C7FF);
  background-color: var(--admiral-color-Neutral_Neutral00, #FFFFFF);
}

.c1:checked:not(:disabled)+div>span {
  border: 5px solid var(--admiral-color_Primary_Primary60Main, #0062FF);
}

.c1:not(:disabled):focus-visible+div {
  outline-offset: 2px;
  outline: var(--admiral-color-Primary_Primary60Main, #0062FF) solid 2px;
}

.c1:not(:disabled):hover+div>div {
  visibility: visible;
}

.c1:not(:disabled):hover:focus-visible+div {
  outline: none;
}

.c1:not(:disabled):active+div>div {
  visibility: visible;
  background: var(--admiral-color-Opacity_Press, #0000001F);
}

.c1:not(:disabled):active:focus-visible+div {
  outline: none;
}

.c0 {
  display: flex;
  align-items: flex-start;
  position: relative;
  box-sizing: content-box;
  user-select: none;
  cursor: pointer;
  color: var(--admiral-color-Neutral_Neutral90, #252629);
}

fieldset:disabled .c0.c0 {
  color: var(--admiral-color-Neutral_Neutral30, #B2B5B8);
  cursor: not-allowed;
}

<div>
    <label
      class="c0"
    >
      <input
        class="c1"
        data-testid="element"
        type="radio"
        value="radio1"
      />
      <div
        class="c2"
      >
        <div
          class="c3"
        />
        <span
          aria-hidden="true"
          class="c4"
        />
      </div>
      <div
        class="c5"
      >
        text
      </div>
    </label>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
